parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> query SEMICOLON
Rule 2     query -> SELECT column_list FROM STRING where_clause
Rule 3     column_list -> STAR
Rule 4     column_list -> ID
Rule 5     column_list -> column_list COMMA ID
Rule 6     where_clause -> <empty>
Rule 7     where_clause -> WHERE condition
Rule 8     condition -> condition AND condition
Rule 9     condition -> condition OR condition
Rule 10    condition -> ID OPERATOR value
Rule 11    value -> STRING
Rule 12    value -> NUMBER

Terminals, with rules where they appear

AND                  : 8
COMMA                : 5
FROM                 : 2
ID                   : 4 5 10
NUMBER               : 12
OPERATOR             : 10
OR                   : 9
SELECT               : 2
SEMICOLON            : 1
STAR                 : 3
STRING               : 2 11
WHERE                : 7
error                : 

Nonterminals, with rules where they appear

column_list          : 2 5
condition            : 7 8 8 9 9
program              : 0
query                : 1
value                : 10
where_clause         : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . query SEMICOLON
    (2) query -> . SELECT column_list FROM STRING where_clause

    SELECT          shift and go to state 3

    program                        shift and go to state 1
    query                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> query . SEMICOLON

    SEMICOLON       shift and go to state 4


state 3

    (2) query -> SELECT . column_list FROM STRING where_clause
    (3) column_list -> . STAR
    (4) column_list -> . ID
    (5) column_list -> . column_list COMMA ID

    STAR            shift and go to state 6
    ID              shift and go to state 7

    column_list                    shift and go to state 5

state 4

    (1) program -> query SEMICOLON .

    $end            reduce using rule 1 (program -> query SEMICOLON .)


state 5

    (2) query -> SELECT column_list . FROM STRING where_clause
    (5) column_list -> column_list . COMMA ID

    FROM            shift and go to state 8
    COMMA           shift and go to state 9


state 6

    (3) column_list -> STAR .

    FROM            reduce using rule 3 (column_list -> STAR .)
    COMMA           reduce using rule 3 (column_list -> STAR .)


state 7

    (4) column_list -> ID .

    FROM            reduce using rule 4 (column_list -> ID .)
    COMMA           reduce using rule 4 (column_list -> ID .)


state 8

    (2) query -> SELECT column_list FROM . STRING where_clause

    STRING          shift and go to state 10


state 9

    (5) column_list -> column_list COMMA . ID

    ID              shift and go to state 11


state 10

    (2) query -> SELECT column_list FROM STRING . where_clause
    (6) where_clause -> .
    (7) where_clause -> . WHERE condition

    SEMICOLON       reduce using rule 6 (where_clause -> .)
    WHERE           shift and go to state 13

    where_clause                   shift and go to state 12

state 11

    (5) column_list -> column_list COMMA ID .

    FROM            reduce using rule 5 (column_list -> column_list COMMA ID .)
    COMMA           reduce using rule 5 (column_list -> column_list COMMA ID .)


state 12

    (2) query -> SELECT column_list FROM STRING where_clause .

    SEMICOLON       reduce using rule 2 (query -> SELECT column_list FROM STRING where_clause .)


state 13

    (7) where_clause -> WHERE . condition
    (8) condition -> . condition AND condition
    (9) condition -> . condition OR condition
    (10) condition -> . ID OPERATOR value

    ID              shift and go to state 15

    condition                      shift and go to state 14

state 14

    (7) where_clause -> WHERE condition .
    (8) condition -> condition . AND condition
    (9) condition -> condition . OR condition

    SEMICOLON       reduce using rule 7 (where_clause -> WHERE condition .)
    AND             shift and go to state 16
    OR              shift and go to state 17


state 15

    (10) condition -> ID . OPERATOR value

    OPERATOR        shift and go to state 18


state 16

    (8) condition -> condition AND . condition
    (8) condition -> . condition AND condition
    (9) condition -> . condition OR condition
    (10) condition -> . ID OPERATOR value

    ID              shift and go to state 15

    condition                      shift and go to state 19

state 17

    (9) condition -> condition OR . condition
    (8) condition -> . condition AND condition
    (9) condition -> . condition OR condition
    (10) condition -> . ID OPERATOR value

    ID              shift and go to state 15

    condition                      shift and go to state 20

state 18

    (10) condition -> ID OPERATOR . value
    (11) value -> . STRING
    (12) value -> . NUMBER

    STRING          shift and go to state 22
    NUMBER          shift and go to state 23

    value                          shift and go to state 21

state 19

    (8) condition -> condition AND condition .
    (8) condition -> condition . AND condition
    (9) condition -> condition . OR condition

    AND             reduce using rule 8 (condition -> condition AND condition .)
    OR              reduce using rule 8 (condition -> condition AND condition .)
    SEMICOLON       reduce using rule 8 (condition -> condition AND condition .)

  ! AND             [ shift and go to state 16 ]
  ! OR              [ shift and go to state 17 ]


state 20

    (9) condition -> condition OR condition .
    (8) condition -> condition . AND condition
    (9) condition -> condition . OR condition

    OR              reduce using rule 9 (condition -> condition OR condition .)
    SEMICOLON       reduce using rule 9 (condition -> condition OR condition .)
    AND             shift and go to state 16

  ! AND             [ reduce using rule 9 (condition -> condition OR condition .) ]
  ! OR              [ shift and go to state 17 ]


state 21

    (10) condition -> ID OPERATOR value .

    AND             reduce using rule 10 (condition -> ID OPERATOR value .)
    OR              reduce using rule 10 (condition -> ID OPERATOR value .)
    SEMICOLON       reduce using rule 10 (condition -> ID OPERATOR value .)


state 22

    (11) value -> STRING .

    AND             reduce using rule 11 (value -> STRING .)
    OR              reduce using rule 11 (value -> STRING .)
    SEMICOLON       reduce using rule 11 (value -> STRING .)


state 23

    (12) value -> NUMBER .

    AND             reduce using rule 12 (value -> NUMBER .)
    OR              reduce using rule 12 (value -> NUMBER .)
    SEMICOLON       reduce using rule 12 (value -> NUMBER .)

